Vytvořen index.html

--- a/index.html
+++ b/index.html
@@ -16,3 +16,39 @@ Vizitku ostyluj pomocí CSS:
 
 Tip: Webdesign In 4 Minutes https://jgthms.com/web-design-in-4-minutes/
 -->
+
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Webová vizitka</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Capriola|Montserrat:400,700|Raleway:400,700&display=swap&subset=latin-ext" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <section>
+            <div class="box">
+            <img class="mojefoto" src="obrázky/mojefoto.jpg" alt="Foto Ivety Čermákové"> 
+            
+            <h2>IVETA ČERMÁKOVÁ</h2>
+
+            <div class="line"></div>
+
+            <p>Ahoj, jmenuju se Ivet.</p>
+            <p>Miluju cestování, vychlazené pivo, polární záři a sci-fi literaturu.</p> 
+            <p>Ráda se učím nové věci, tak jsem se nedávno vrhla na studium UX designu a tvorbu webových stránek.</p>
+                       
+            <a href="https://www.facebook.com/cermakova.iw">
+                <img class="facebook" src="obrázky/fb_icon.gif" alt="odkaz na facebook"></a>
+             <a href="mailto:cermakova.iw@gmail.com">
+                <img class="email" src="obrázky/mail_icon.gif" alt="odkaz na email"></a>
+
+        </div>
+    </section>
+</body>
+</html>
